rns-lang/src/lexer/snapshots/type_hints-single_type_hint.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
@utf8
----- TOKENS -----
KIND             | SPAN  | LSP     | TEXT
----             | ----  | ---     | ----
TypeHint(@utf8)  | 0..5  | 0:0..5  | @utf8
Newline          | 5..6  | 0:5..6  | \n
